--- a/src/index.html
+++ b/src/index.html
@@ -1,46 +1,52 @@
-<html>
-<title>React打包</title>
-<meta name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>React</title>
+</head>
 <body>
-<div id="errors" style="
-  background: #c00;
-  color: #fff;
-  display: none;
-  margin: -20px -20px 20px;
-  padding: 20px;
-  white-space: pre-wrap;
-"></div>
+<!--<div id="errors" style="-->
+  <!--background: #c00;-->
+  <!--color: #fff;-->
+  <!--display: none;-->
+  <!--margin: -20px -20px 20px;-->
+  <!--padding: 20px;-->
+  <!--white-space: pre-wrap;-->
+<!--"></div>-->
 <div id="example"></div>
+<div id="aa"></div>
 <script>
-  window.addEventListener('mousedown', function (e) {
-    document.body.classList.add('mouse-navigation');
-    document.body.classList.remove('kbd-navigation');
-  });
-  window.addEventListener('keydown', function (e) {
-    if (e.keyCode === 9) {
-      document.body.classList.add('kbd-navigation');
-      document.body.classList.remove('mouse-navigation');
-    }
-  });
-  window.addEventListener('click', function (e) {
-    if (e.target.tagName === 'A' && e.target.getAttribute('href') === '#') {
-      e.preventDefault();
-    }
-  });
-  window.onerror = function (message, source, line, col, error) {
-    var text = error ? error.stack || error : message + ' (at ' + source + ':' + line + ':' + col + ')';
-    errors.textContent += text + '\n';
-    errors.style.display = '';
-  };
-  console.error = (function (old) {
-    return function error() {
-      errors.textContent += Array.prototype.slice.call(arguments).join(' ') + '\n';
-      errors.style.display = '';
-      old.apply(this, arguments);
-    }
-  })(console.error);
+//  window.addEventListener('mousedown', function (e) {
+//    document.body.classList.add('mouse-navigation');
+//    document.body.classList.remove('kbd-navigation');
+//  });
+//  window.addEventListener('keydown', function (e) {
+//    if (e.keyCode === 9) {
+//      document.body.classList.add('kbd-navigation');
+//      document.body.classList.remove('mouse-navigation');
+//    }
+//  });
+//  window.addEventListener('click', function (e) {
+//    if (e.target.tagName === 'A' && e.target.getAttribute('href') === '#') {
+//      e.preventDefault();
+//    }
+//  });
+//  window.onerror = function (message, source, line, col, error) {
+//    var text = error ? error.stack || error : message + ' (at ' + source + ':' + line + ':' + col + ')';
+//    errors.textContent += text + '\n';
+//    errors.style.display = '';
+//  };
+//  console.error = (function (old) {
+//    return function error() {
+//      errors.textContent += Array.prototype.slice.call(arguments).join(' ') + '\n';
+//      errors.style.display = '';
+//      old.apply(this, arguments);
+//    }
+//  })(console.error);
 </script>
-<script src="bundle.js"></script>
+<script src="/bundle.js"></script>
 </body>
 </html>
